# Spark-DSG

./: .clang-format  .cmake-format.yaml  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  MANIFEST.in  README.md  make_docs.py  package.xml  pyproject.toml  setup.cfg  setup.py  tox.ini
kimera_dsg/: .cmake-format.yaml  CMakeLists.txt  package.xml
kimera_dsg/cmake/: json.CMakeLists.txt.in  kimera_dsgConfig.cmake.in
kimera_dsg/include/kimera_dsg/: attribute_factory.h  attribute_serialization.h  attribute_serializer.h  attribute_serializer_fwd.h  base_layer.h  binary_serializer.h  bounding_box.h  dynamic_scene_graph.h  dynamic_scene_graph_layer.h  edge_attributes.h  edge_container.h  graph_binary_serialization.h  graph_serialization.h  graph_utilities.h  iterable_wrapper.h  node_attributes.h  node_symbol.h  pcl_types.h  scene_graph.h  scene_graph_edge.h  scene_graph_layer.h  scene_graph_logger.h  scene_graph_node.h  scene_graph_serialization.h  scene_graph_types.h  serialization_helpers.h
kimera_dsg/python/: CMakeLists.txt  pybind11.CMakeLists.txt.in
kimera_dsg/python/bindings/: kimera_dsg_bindings.cpp
kimera_dsg/src/: adjacency_matrix.cpp  attribute_serialization.cpp  binary_serializer.cpp  bounding_box.cpp  dynamic_scene_graph.cpp  dynamic_scene_graph_layer.cpp  edge_attributes.cpp  edge_container.cpp  graph_binary_serialization.cpp  graph_json_serialization.cpp  graph_serialization.cpp  node_attributes.cpp  node_symbol.cpp  scene_graph.cpp  scene_graph_edge.cpp  scene_graph_layer.cpp  scene_graph_logger.cpp  scene_graph_node.cpp  scene_graph_types.cpp  scene_graph_utilities.cpp  serialization_helpers.cpp
kimera_dsg/tests/: CMakeLists.txt  utest_adjacency_matrix.cpp  utest_attribute_serialization.cpp  utest_bounding_box.cpp  utest_dynamic_scene_graph.cpp  utest_dynamic_scene_graph_layer.cpp  utest_edge_container.cpp  utest_graph_serialization.cpp  utest_graph_utilities_layer.cpp  utest_json_serialization.cpp  utest_main.cpp  utest_node_symbol.cpp  utest_scene_graph.cpp  utest_scene_graph_layer.cpp  utest_scene_graph_node.cpp  utest_scene_graph_types.cpp  utest_serialization.cpp
kimera_dsg/tests/kimera_dsg_tests/: type_comparisons.h
kimera_dsg_python/: CMakeLists.txt  README.md  package.xml  setup.py
kimera_dsg_python/bindings/: kimera_dsg_bindings.cpp
kimera_dsg_python/scripts/: bindings_demo.py  lcd_benchmarking.py  lcd_demo.py  scrape_docstrings.py
kimera_dsg_visualizer/: CMakeLists.txt  package.xml
kimera_dsg_visualizer/cfg/: Colormap.cfg  DynamicLayerVisualizer.cfg  DynamicLayerVisualizerConfig.cfg  LayerVisualizer.cfg  LayerVisualizerConfig.cfg  Visualizer.cfg  VisualizerConfig.cfg
kimera_dsg_visualizer/config/: agent_layer.yaml  buildings_layer.yaml  objects_layer.yaml  places_layer.yaml  rooms_layer.yaml  visualizer.yaml
kimera_dsg_visualizer/include/kimera_dsg_visualizer/: colormap_utils.h  dsg_mesh_plugin.h  dsg_visualizer_plugin.h  dynamic_scene_graph_visualizer.h  feature_config.h.in  scene_graph_visualizer.h  visualizer_types.h  visualizer_utils.h
kimera_dsg_visualizer/launch/: kimera_dsg_visualizer.launch  results_visualizer.launch
kimera_dsg_visualizer/launch/includes/: kimera_dsg_visualizer_base.xml  kimera_dsg_visualizer_params.xml  kimera_dsg_visualizer_rviz.xml
kimera_dsg_visualizer/rviz/: kimera_dsg_visualizer.rviz  results_visualizer.rviz
kimera_dsg_visualizer/src/: dsg_mesh_plugin.cpp  dynamic_scene_graph_visualizer.cpp  kimera_dsg_visualizer_node.cpp  scene_graph_visualizer.cpp  visualizer_types.cpp  visualizer_utils.cpp
python/: CMakeLists.txt  pybind11.CMakeLists.txt.in
python/bindings/: .clang-format  kimera_dsg_bindings.cpp  scene_graph_iterators.h  spark_dsg_bindings.cpp  zmq_bindings.cpp  zmq_bindings.h.in
python/bindings/src/: attributes.cpp  bounding_box.cpp  color.cpp  dynamic_scene_graph.cpp  edge_attributes.cpp  graph_types.cpp  mesh.cpp  mesh_helpers.cpp  metadata.cpp  misc_types.cpp  node_attributes.cpp  python_layer_view.cpp  python_types.cpp  scene_graph.cpp  scene_graph_edge.cpp  scene_graph_iterators.cpp  scene_graph_layer.cpp  scene_graph_node.cpp  scene_graph_utilities.cpp  spark_dsg_bindings.cpp  spark_types.cpp  zmq_interface.cpp
python/scripts/: kimera_scene_graph_python_example.py  kimera_scene_graph_python_serialize.py  lcd_benchmarking.py  lcd_demo.py  matplotib_viz.py  scrape_docstrings.py
python/spark_dsg/: __init__.py  __main__.py  io.py  mp3d.py  networkx.py  open3d_visualization.py  torch_conversion.py  viser.py  visualization.py  zmq.py
python/spark_dsg/commands/: main.py  visualize.py  zmq.py
python/src/kimera_dsg/: __init__.py
python/src/spark_dsg/: __init__.py  io.py  mp3d.py  networkx.py  torch_conversion.py  (+2 more)
python/tests/: conftest.py  test_bindings.py  test_io.py  test_mesh.py  test_mp3d.py  test_networkx.py  test_torch.py
tests/: CMakeLists.txt  GoogleTest.CMakeLists.txt.in  utest_adjacency_matrix.cpp  utest_attribute_serialization.cpp  utest_binary_serialization.cpp  utest_bounding_box.cpp  utest_bounding_box_extraction.cpp  utest_color.cpp  utest_dynamic_scene_graph.cpp  utest_dynamic_scene_graph_layer.cpp  utest_dynamic_scene_graph_serialization.cpp  utest_edge_container.cpp  utest_file_io.cpp  utest_graph_utilities_layer.cpp  utest_json_serialization.cpp  utest_label_space.cpp  utest_labelspace.cpp  utest_layer_prefix.cpp  utest_main.cpp  utest_memory_usage.cpp  utest_mesh.cpp  utest_metadata.cpp  utest_node_attributes.cpp  utest_node_symbol.cpp  utest_ray_traversability_boundary.cpp  utest_scene_graph.cpp  utest_scene_graph_layer.cpp  utest_scene_graph_node.cpp  utest_scene_graph_types.cpp  utest_scene_graph_utilities.cpp  utest_traversability_boundary.cpp  utest_zmq_interface.cpp
tests/kimera_dsg_tests/: temp_file.h  type_comparisons.h
tests/serialization/: utest_attribute_serialization.cpp  utest_binary_conversions.cpp  utest_binary_serialization.cpp  utest_file_io.cpp  utest_graph_serialization.cpp  utest_json_conversions.cpp  utest_mesh_serialization.cpp
tests/spark_dsg_tests/: default_attributes.h  temp_file.h  type_comparisons.h
(+176 files in other folders)
