[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "spark_dsg"
version = "1.1.1"
description = "Library for representing 3D scene graphs"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "seaborn",
    "shapely",
]
authors = [
  {name ="Nathan Hughes", email = "na26933@mit.edu"},
  {name ="Yun Chang", email = "yunchang@mit.edu"},
]
maintainers = [
  {name ="Nathan Hughes", email = "na26933@mit.edu"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
]

[project.optional-dependencies]
viz = [
    "plotly",
    "open3d >= 0.17",
    "scipy",
    "zmq",
]

[project.urls]
Repository = "https://github.com/MIT-SPARK/Spark-DSG"

[tool.scikit-build.cmake.define]
SPARK_DSG_BUILD_PYTHON = "ON"
SPARK_DSG_BUILD_EXAMPLES = "OFF"
SPARK_DSG_BUILDING_PYTHON_PACKAGE = "ON"
BUILD_TESTING = "OFF"
BUILD_SHARED_LIBS = "OFF"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.ruff.lint.isort]
split-on-trailing-comma = true
