[metadata]
name = spark_dsg
version = 0.0.1
author = Nathan Hughes
author_email = na26933@mit.edu
url: https://github.com/MIT-SPARK/Spark-DSG
description = Python bindings for a dynamic scene graph api
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License

[options]
zip_safe = False
package_dir =
    = python/src/
packages = find:
python_requires = >=3.6
install_requires =
    numpy
    seaborn
    shapely

[options.extras_require]
viz =
    plotly
    open3d
    scipy
    zmq

[options.packages.find]
where = python/src
