<?xml version="1.0"?>
<package format="2">
  <name>kimera_dsg_visualizer</name>
  <version>1.0.0</version>
  <description>A rviz-based visualizer for Dynamic Scene Graphs (DSGs)</description>

  <author email="na26933@mit.edu">Nathan Hughes</author>
  <maintainer email="na26933@mit.edu">Nathan Hughes</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>libopencv-dev</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>kimera_dsg</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_eigen</depend>

</package>
